# mcp-aviation

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  PROJECT_OVERVIEW.md  README.md  app.py  docker-compose.yml  load_keys.py  mcp_server.py  pyproject.toml
.kiro/specs/emergency-airport-finder/: DEVELOPMENT_SUMMARY.md  design.md  requirements.md  tasks.md
.kiro/steering/: coding_standards.md
data/: emergency_airports.db.wal
src/: __init__.py
src/core/: __init__.py  cache.py  engine.py
src/data/: airport_fetcher.py  database.py  initial_data.py  models.py
src/integrations/: geocoding_client.py  ourairports_client.py
src/mcp/: __init__.py  server.py
src/web/: api.py
tests/: test_mcp_server.py  test_system.py
