[project]
name = "emergency-airport-finder"
version = "0.1.0"
description = "Real-time aviation safety tool for finding suitable emergency landing airports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "duckdb>=0.9.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "detect-secrets>=1.4.0",
]

[tool.ruff]
line-length = 120
